# DoomTool

./: README.md  pyproject.toml
config/: mods.manifest.json  settings.json  sources.doom1.manifest.json  sources.doom2.manifest.json
doom_tool/: main.py
doom_tool/core/: config.py  downloader.py  source_selector.py
doom_tool/mods/: manager.py
modules/: dm.bat  dooming.json  initD.py
